<resources>
    <string name="account_compression">Use compression</string>
    <string name="account_editor_title">%1$s account %2$s</string>
    <string name="account_enabled">Enabled</string>
    <string name="account_host">Host</string>
    <string name="account_password">Password</string>
    <string name="account_port">Port</string>
    <string name="account_priority">Priority</string>
    <string name="account_resource">Resource</string>
    <string name="account_server_name">Server</string>
    <string name="account_type">Account type</string>
    <string name="account_type_hints_xmpp">name@example.com</string>
    <string name="account_type_helps_xmpp">If you want to learn more about XMPP (Jabber) here: http://xmpp.org\nTo register new XMPP account please go to https://register.jabber.org, or any other Jabber server.</string>
    <string name="account_type_names_xmpp">XMPP</string>
    <string name="account_user_name">Username</string>
    <string name="EMPTY_SERVER_NAME">Server name is not specified</string>
    <string name="EMPTY_USER_NAME">Username is not specified</string>
    <string name="account_archive_mode">Store message history</string>
    <string name="account_archive_mode_available">On server if available</string>
    <string name="account_archive_mode_dont_store">Don\'t store</string>
    <string name="account_archive_mode_local">Locally on device</string>
    <string name="account_archive_mode_server">On server</string>
    <string name="account_archive_mode_unread">Locally only unsent and unread</string>
    <string name="account_compression_summary">Check to enable data compression</string>
    <string name="account_custom">Custom host</string>
    <string name="account_custom_summary">Use custom host settings instead of SRV record</string>
    <string name="account_enabled_summary">Check to enable account</string>
    <string name="account_invalid_port">Port must be a number (default: 5222)</string>
    <string name="account_invalid_priority">Priority value must be a number between -128 and 128 (default: 10)</string>
    <string name="account_oauth">Authorization</string>
    <string name="account_oauth_invalidated">Not authorized</string>
    <string name="account_oauth_summary">OAuth settings</string>
    <string name="account_protocol_xmpp_title">XMPP</string>
    <string name="account_proxy_host">Proxy host</string>
    <string name="account_proxy_password">Proxy password</string>
    <string name="account_proxy_port">Proxy port</string>
    <string name="account_proxy_type">Proxy type</string>
    <string name="account_proxy_type_http">HTTP</string>
    <string name="account_proxy_type_none">Disabled</string>
    <string name="account_proxy_type_orbot">Orbot</string>
    <string name="account_proxy_type_socks4">SOCKS4</string>
    <string name="account_proxy_type_socks5">SOCKS5</string>
    <string name="account_proxy_user">Proxy user</string>
    <string name="account_store_password">Store password</string>
    <string name="account_sasl">Use SASL Authentication (recommended)</string>
    <string name="account_sasl_summary">Disable for very old server</string>
    <string name="account_store_password_summary">Disable this option to request password each time you go online</string>
    <string name="account_syncable">Integration into system contacts</string>
    <string name="account_syncable_summary">Show contacts from this account in phone`s contact list</string>
    <string name="account_tls_enable">Enable TLS</string>
    <string name="account_tls_enable_summary">Use TLS encryption when possible to connect to server</string>
    <string name="account_tls_legacy">Legacy SSL</string>
    <string name="account_tls_legacy_summary">Use legacy SSL encryption when connect to server</string>
    <string name="account_tls_mode">TLS/SSL usage</string>
    <string name="account_tls_require">Require TLS</string>
    <string name="account_tls_require_summary">Require TLS encryption when connect to server</string>
    <string name="confirm_cancellation">Are you sure you want to discard all the changes?</string>
    <string name="INCORRECT_USER_NAME">Incorrect user name. Check help text below for details.</string>
    <string name="orbot_required_message">In order to process using TOR you must have Orbot installed and activated to proxy traffic through it. Would you like to install it from Google Play?</string>
    <string name="orbot_required_title">Install Orbot?</string>
    <string name="registration_label">New registration</string>
    <string name="name">Name</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="nationality">Nationality</string>
    <string name="select_country">Choose a country</string>
    <string name="confirm_password">Confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_registration">Register</string>
    <string name="welcome_label">Completion of registration</string>
    <string name="welcome_text">Welcome!</string>
    <string name="graduation_year">"Graduation year"</string>
    <string name="select_year">Choose a year</string>
    <string name="nickname">Nickname/ID</string>
    <string name="submit">Submit</string>
    <string name="faculty">Faculty</string>
    <string name="select_faculty">Choose a faculty</string>
    <string name="select_undergraduate">Choose a status</string>
    <string name="status">Status</string>
    <string name="account_add">Login</string>
    <string name="register_account">Register new account</string>
    <string name="conf_lev">Set the Confidence Level (40 to 80%)</string>
    <string name="cap_freq">Set the delay between screen captures (1 to 10 seconds)</string>
    <string name="au_res">Resume screen capturing after a successful recognition</string>
    <string name="nullValue">0</string>
    <string name="save">Save</string>
    <string name="chat_input_hint">Type your message here</string>
    <string name="chat_page">Chat %1$d of %2$d</string>
    <string name="chat_send">Send</string>
    <string name="contact_viewer_title">User profile information</string>
    <string name="contact_viewer_avatar">Contact avatar</string>
    <string name="contact_viewer_id">User id</string>
    <string name="contact_viewer_name">Full name</string>
    <string name="contact_viewer_email">Email</string>
    <string name="contact_viewer_nationality">Nationality</string>
    <string name="contact_viewer_status">Status</string>
    <string name="contact_viewer_graduation_year">Graduation year</string>
    <string name="contact_viewer_faculty">Faculty</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="notice">Notice</string>
</resources>