<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2014, Bait Al-Hikma LTD. All rights reserved.

  This file is part of Waseda Connect.

  Waseda Connect is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Waseda Connect is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Waseda Connect. If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/tvConfLev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_lev" />

    <SeekBar
        android:id="@+id/sbConfLev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/confText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/nullValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvCapFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cap_freq" />

    <SeekBar
        android:id="@+id/sbCapFreq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/capFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/nullValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/cbAuRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/au_res"
        android:checked="false" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>