<!--
  Copyright (c) 2014, Bait Al-Hikma LTD. All rights reserved.

  This file is part of Waseda Connect.

  Waseda Connect is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  Waseda Connect is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with Waseda Connect. If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sub_navigation_bb"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/dark_bordeaux">
        
        <Button
            android:id="@+id/profile_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/dark_bordeaux"
            android:text="@string/profile"
            android:paddingTop="3dp"
        	android:paddingBottom="3dp"
        	android:textColor="@color/text_white" />

        <Button
            android:id="@+id/setting_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.25"
            android:background="@color/dark_bordeaux"
            android:text="@string/setting"
            android:paddingTop="3dp"
        	android:paddingBottom="3dp"
        	android:textColor="@color/text_white" />

        <Button
            android:id="@+id/notice_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/dark_bordeaux"
            android:text="@string/notice"
            android:paddingTop="3dp"
        	android:paddingBottom="3dp"
        	android:textColor="@color/text_white" />
        
        <Button
            android:id="@+id/map_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/dark_bordeaux"
            android:text="@string/map"
            android:paddingTop="3dp"
        	android:paddingBottom="3dp"
        	android:textColor="@color/text_white" />

</LinearLayout>
