<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (c) 2013, Redsolution LTD. All rights reserved.

     This file is part of Xabber project; you can redistribute it and/or
     modify it under the terms of the GNU General Public License, Version 3.

     Xabber is distributed in the hope that it will be useful, but
     WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
     See the GNU General Public License for more details.

     You should have received a copy of the GNU General Public License,
     along with this program. If not, see http://www.gnu.org/licenses/.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bright_foreground_light"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:id="@+id/auth_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView 
                android:contentDescription="logo"
                android:layout_margin="30dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"/>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_user_name"
                android:textColor="@color/text_black" />

            <EditText
                android:id="@+id/account_user_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_password"
                android:textColor="@color/text_black" />

            <EditText
                android:id="@+id/account_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:text="" />

            <CheckBox
                android:id="@+id/store_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/account_store_password" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/ok"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_add" />

            <Button
                android:id="@+id/register_account_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_account" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>