<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <include layout="@layout/contact_title" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="4dip"
            android:stackFromBottom="true"
            android:transcriptMode="normal"
            android:smoothScrollbar="false"
            />
        <TextView
            android:id="@+id/chat_page"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="4dip"
            android:textSize="12sp"
            android:gravity="center"
            android:visibility="gone"
            android:background="?android:attr/colorBackground"
            android:text="@string/chat_page"
            />
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip">
        <EditText
            android:id="@+id/chat_input"
            android:layout_weight="1"
			android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
			android:imeOptions="actionSend|flagNoEnterAction"
            android:cursorVisible="true"
            android:hint="@string/chat_input_hint"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:fadingEdge="vertical"
            />
        <Button
            android:text="@string/chat_send"
            android:id="@+id/chat_send"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            />
    </LinearLayout>
</LinearLayout>
